# aperture

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  DEPLOY_GCP.md  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
api/: __init__.py  db.py  jobs.py  main.py  storage.py
api/routers/: components.py  documents.py  runs.py
configs/: pricing.yaml  run_config.yaml
retrieval_bench/: README.md
sample_docs/: generate_synthetic_docs.py
sample_docs/image_heavy/: ground_truth.json
sample_docs/powerpoint/: ground_truth.json  sample_deck.pptx
sample_docs/scanned/: ground_truth.json
sample_docs/structured/: ground_truth.json  sample_structured.docx
src/ingestbench/: __init__.py  __main__.py  cli.py
src/ingestbench/chunking/: __init__.py  _helpers.py  (+3 more)
tests/api/: test_phase10_api.py
tests/chunking/: __init__.py  test_phase3_chunking.py
tests/core/: test_core_smoke.py
tests/embedding/: __init__.py  test_phase5_embedding.py
tests/extraction/: __init__.py  test_phase2_extraction.py
tests/metadata/: __init__.py  test_phase4_metadata.py
tests/vectorstore/: __init__.py  test_phase6_vectorstore.py
web/: .gitignore  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BenchmarkVisualizations.tsx  ChartPanels.tsx  Leaderboard.tsx  NavBar.tsx  Pipeline.tsx  RecommendationCards.tsx  ScoreBreakdown.tsx  SkippedComponentsPanel.tsx  ThemeToggle.tsx  TradeoffAnalysis.tsx
web/lib/: api-client.ts  componentLabels.ts  narrative.ts  report.ts  scoring.ts  skipReasons.ts  vendorProfiles.ts
(+37 files in other folders)
